@@ -6,7 +6,7 @@
     <groupId>com.futtosarisu</groupId>
     <artifactId>deustock</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
     <name>DeuStock</name>
 
 	<properties>
@@ -31,12 +31,18 @@
     </dependencyManagement>
 
     <dependencies>
+        <!-- ###################################################### -->
+        <!--  					 SUREFIRE 							-->
+        <!-- ###################################################### -->
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>3.0.0-M3</version>
 		</dependency>
-
+		
+        <!-- ###################################################### -->
+        <!--  					    JAX 							-->
+        <!-- ###################################################### -->
         <dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
@@ -57,18 +63,30 @@
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+        
+        <!-- ###################################################### -->
+        <!--  					    JERSEY 							-->
+        <!-- ###################################################### -->
+        <dependency>
+			<groupId>org.glassfish.jersey.test-framework.providers</groupId>
+			<artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<!-- uncomment this to get JSON support-->
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-binding</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-grizzly2-http</artifactId>
+			<version>${jersey.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
-
-        <dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet-core</artifactId>
@@ -81,24 +99,68 @@
 			<artifactId>jersey-hk2</artifactId>
 			<version>${jersey.version}</version>
         </dependency>
-
+                
+        <!-- ###################################################### -->
+        <!--  					TESTISNG 							-->
+        <!-- ###################################################### -->  
+        <dependency>
+  			<groupId>junit</groupId>
+  			<artifactId>junit</artifactId>
+  			<version>4.13.1</version>
+  			<scope>test</scope>
+		</dependency>		
 		<dependency>
-			<groupId>org.glassfish.jersey.test-framework.providers</groupId>
-			<artifactId>jersey-test-framework-provider-grizzly2</artifactId>
-			<version>${jersey.version}</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>RELEASE</version>
+			<scope>test</scope>
 		</dependency>
-			<!-- uncomment this to get JSON support
-			-->
 		<dependency>
-			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-binding</artifactId>
-			<version>${jersey.version}</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>RELEASE</version>
+			<scope>test</scope>
+		</dependency>		
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>5.7.0</version>
 		</dependency>
-		<dependency>
-            <groupId>org.glassfish.jersey.containers</groupId>
-            <artifactId>jersey-container-grizzly2-http</artifactId>
-			<version>${jersey.version}</version>
+		<!-- JUNIT5 + SUREFIRE -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.7.0</version>
         </dependency>
+		<!-- https://mvnrepository.com/artifact/org.databene/contiperf -->
+		<dependency>
+			<groupId>org.databene</groupId>
+			<artifactId>contiperf</artifactId>
+			<version>2.3.4</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>3.9.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>3.9.0</version>
+			<scope>test</scope>
+		</dependency>		
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
+		<!-- ###################################################### -->
+        <!--  					 DATA SCRAPPING 				    -->
+        <!-- ###################################################### -->
         <dependency>
             <groupId>com.github.jreddit</groupId>
             <artifactId>jreddit</artifactId>
@@ -109,7 +171,15 @@
             <artifactId>twitter4j-core</artifactId>
             <version>4.0.7</version>
         </dependency>
+		<dependency>
+			<groupId>com.yahoofinance-api</groupId>
+			<artifactId>YahooFinanceAPI</artifactId>
+			<version>3.15.0</version>
+		</dependency>
 
+		<!-- ###################################################### -->
+        <!--  					      NLP     				        -->
+        <!-- ###################################################### -->
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
@@ -121,14 +191,10 @@
             <version>4.0.0</version>
             <classifier>models</classifier>
         </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
-            <scope>test</scope>
-        </dependency>
 
-
+		<!-- ###################################################### -->
+        <!--  					    LOGGING				            -->
+        <!-- ###################################################### -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -144,19 +210,21 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.13.3</version>
         </dependency>
-        <dependency>
-            <groupId>org.junit.vintage</groupId>
-            <artifactId>junit-vintage-engine</artifactId>
-            <version>5.7.0</version>
-        </dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>[1.2.17, )</version>
+		</dependency>
+
+		<!-- ###################################################### -->
+        <!--  					      JDO 				            -->
+        <!-- ###################################################### -->
 		<!-- https://mvnrepository.com/artifact/javax.jdo/jdo-api -->
 		<dependency>
 			<groupId>javax.jdo</groupId>
 			<artifactId>jdo-api</artifactId>
 			<version>3.0.1</version>
 		</dependency>
-
-
 		<!-- https://mvnrepository.com/artifact/org.apache.jdo/jdo2-enhancer -->
 		<dependency>
 			<groupId>org.datanucleus</groupId>
@@ -188,18 +256,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.23</version>
 		</dependency>
-
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>[1.2.17, )</version>
-		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 			<version>2.12.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -210,11 +271,10 @@
 			<artifactId>jackson-annotations</artifactId>
 			<version>2.12.1</version>
 		</dependency>
-		<dependency>
-			<groupId>com.yahoofinance-api</groupId>
-			<artifactId>YahooFinanceAPI</artifactId>
-			<version>3.15.0</version>
-		</dependency>
+
+		<!-- ###################################################### -->
+        <!--  					     JSON				            -->
+        <!-- ###################################################### -->
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
@@ -225,8 +285,39 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.6</version>
 		</dependency>
-
+		
+		<!-- ###################################################### -->
+        <!--  					     PDFS 				            -->
+        <!-- ###################################################### -->
+		<dependency>
+	        <groupId>javax</groupId>
+	        <artifactId>javaee-api</artifactId>
+	        <version>8.0</version>
+	        <scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.eclipse.microprofile</groupId>
+	        <artifactId>microprofile</artifactId>
+	        <version>3.2</version>
+	        <type>pom</type>
+	        <scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.apache.pdfbox</groupId>
+	        <artifactId>pdfbox</artifactId>
+	        <version>2.0.20</version>
+	    </dependency>
+	    <!-- ###################################################### -->
+        <!--  					    XCHART 				            -->
+        <!-- ###################################################### -->
+	    <dependency>
+	        <groupId>org.knowm.xchart</groupId>
+	        <artifactId>xchart</artifactId>
+	        <version>3.6.3</version>
+	    </dependency>
+		
 	</dependencies>
+
 
     <build>
     	<sourceDirectory>src/main/java</sourceDirectory>
@@ -286,7 +377,6 @@
 
 			</plugin>
 
-
 	        <plugin>
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-surefire-plugin</artifactId>
@@ -298,8 +388,27 @@
 					<reuseForks>true</reuseForks>
 					<argLine>${surefireArgLine} -Xmx1024m -noverify --enable-preview</argLine>
 				</configuration>
-
 	        </plugin>
+	        
+	        <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-failsafe-plugin</artifactId>
+		        <version>3.0.0-M5</version>
+		        <configuration>
+					<includes>
+						<include>**/*IT</include>
+					</includes>
+        			<argLine>--enable-preview</argLine>
+    			</configuration>
+		        <executions>
+		          <execution>
+		            <goals>
+		              <goal>integration-test</goal>
+		              <goal>verify</goal>
+		            </goals>
+		          </execution>
+		        </executions>
+      		</plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -331,6 +440,7 @@
 						<phase>compile</phase>
 						<goals>
 							<goal>enhance</goal>
+							<goal>schema-create</goal>
 						</goals>
 					</execution>
 				</executions>
@@ -365,14 +475,14 @@
 		<repository>
 			<id>DN_M2_Repo</id>
 			<name>DataNucleus Repository</name>
-			<url>http://www.datanucleus.org/downloads/maven2</url>
+			<url>https://www.datanucleus.org/downloads/maven2</url>
 		</repository>
     </repositories>
 
 	<pluginRepositories>
 		<pluginRepository>
 			<id>DataNucleus_2</id>
-			<url>http://www.datanucleus.org/downloads/maven2/</url>
+			<url>https://www.datanucleus.org/downloads/maven2/</url>
 		</pluginRepository>
 	</pluginRepositories>
 </project>
